feat : relationship review & model
