# storage/api-docs/api-docs.json
@@ -452,6 +452,10 @@
                                         "type": "number",
                                         "example": "1"
                                     },
+                                    "id_customer": {
+                                        "type": "number",
+                                        "example": "1"
+                                    },
                                     "rating": {
                                         "type": "number",
                                         "example": "4"
